--- a/locales/cs.json
+++ b/locales/cs.json
@@ -434,6 +434,11 @@
       "title": "Drops<span class=\"Colored\"> & </span>Wins",
       "name": "Drops & Wins Live",
       "text": "Pragmatic Play vám nabízí stále více příležitostí zábavy na nové úrovni díky nové Drops and Wins for Live Casino. Nenechte si ujít příležitost vyhrát podíl z neuvěřitelných 3 000 000 eur v hotovosti!<br/><br/>Máte rádi živé hry? Pak je tato živá akce určena právě pro vás. Zúčastněte se týdenních turnajů – ruleta, blackjack, Mega Wheel, Baccarat!"
+    },
+    "dailyCashHunt": {
+      "title": "Daily <br/> Cash Hunt",
+      "name": "TOTO LÉTO ZKUSTE VYSLEDOVAT 60 K VYPLÁCENÉ JAKO DENNÍ HOTOVOST!",
+      "text": "Casino Ninecasino vás s potěšením vítá jako účastníka síťového turnaje „Daily Cash Hunt“, který pořádá Booongo.<br/>Turnajová série je unikátní herní promo akce, kterou pořádá Booongo. Je to kombinace pravidelných turnajů s různými podmínkami (jednotlivé turnaje ze série mohou mít odlišnou délku); bodování turnaje (vítězný mechanik) a také 2. (EXTRA) výsledková tabulka pro celkové postavení hráče v turnaji.<br/><br/>Nenechte si ujít příležitost získat podíl na obrovském prize poolu od Booongo! Hrajte, bavte se a vyhrávejte!"
     }
   },
   "tournaments" : {
@@ -565,6 +570,38 @@
       {
         "title": "Další:",
         "text": "<strong>How to win:<br/><br/>Týdenní turnaj v ruletě<br/>Ceny:</strong> celkem 50 000 eur rozdělených na 1 000 cen:<br/>-\tHráči musí hrát se skutečnými penězi v některé ze zahrnutých her a provést minimální sázku ve výši 0,50 euro v průběhu promo akce. Hráčům nevznikají žádné další výdaje související s účastí<br/><br/>Hráč musí získat minimálně 2 po sobě jdoucí kvalifikační výhry, přičemž každá z po sobě jdoucích kvalifikačních výher bude větší než dvojnásobek celkové kvalifikační sázky pro účast v týdenním turnaji v ruletě.<br/><br/>Hráči mohou zvýšit své skóre v týdenním turnaji v ruletě s každou další následnou kvalifikační výhrou.<br/><br/>Jakékoliv sázky s pravděpodobností výhry 1:1 (červená/černá, sudá/lichá, 1:18/19:36) nebudou započítány do skóre týdenního turnaje v ruletě.<br/><br/><strong>Týdenní turnaj v blackjacku:<br/>Ceny:</strong> celkem 25 000 eur rozdělených na 300 cen:<br/>-\tHráči musí hrát se skutečnými penězi v některé ze zahrnutých her a provést minimální sázku ve výši 10 euro v průběhu promo akce. Hráčům nevznikají žádné další výdaje související s účastí.<br/><br/>Hráč musí získat minimálně 2 po sobě jdoucí kvalifikační výhry, přičemž každá z po sobě jdoucích kvalifikačních výher bude větší než jednou celkové kvalifikační sázky pro účast v týdenním turnaji v blackjacku.<br/><br/>Hráči mohou zvýšit své skóre v týdenním turnaji v blackjacku s každou další následnou kvalifikační výhrou.<br/><br/>Do týdenního turnaje v blackjacku se započítávají pouze hlavní sázky a/nebo Bet Behind.<br/><br/><strong>Týdenní turnaj v Mega Wheel:<br/>Ceny:</strong> celkem 25 000 eur rozdělených na 600 cen:<br/>Hráči musí hrát se skutečnými penězi v některé ze zahrnutých her a provést minimální sázku ve výši 0,50 euro v průběhu promo akce. Hráčům nevznikají žádné další výdaje související s účastí.<br/><br/>Hráč musí získat minimálně 2 po sobě jdoucí kvalifikační výhry, přičemž každá z po sobě jdoucích kvalifikačních výher bude větší než jednou celkové kvalifikační sázky pro účast v týdenním turnaji v Mega Wheel.<br/><br/>Hráči mohou zvýšit své skóre v týdenním turnaji v Mega Wheel s každou další následnou kvalifikační výhrou.<br/><br/>Do týdenního turnaje v Mega Wheel mohou být započteny všechny kvalifikační sázky.<br/><br/><strong>Týdenní turnaj v Baccaratu:<br/>Ceny:</strong> celkem 25 000 eur rozdělených na 600 cen:<br/>Hráči musí hrát se skutečnými penězi v některé ze zahrnutých her a provést minimální sázku ve výši 0,50 euro v průběhu promo akce. Hráčům nevznikají žádné další výdaje související s účastí.<br/><br/>Hráč musí získat minimálně 2 po sobě jdoucí kvalifikační výhry, přičemž každá z po sobě jdoucích kvalifikačních výher bude větší než jednou celkové kvalifikační sázky pro účast v týdenním turnaji v Baccaratu.<br/><br/>Hráči mohou zvýšit své skóre v týdenním turnaji v Baccaratu s každou další následnou kvalifikační výhrou.<br/><br/>Do skóre týdenního turnaje v Baccaratu se započítávají pouze hlavní sázky (pozice hráč, bankéř a Tie)."
+      }
+    ]
+  },
+  "dailyCashHunt": {
+    "title": "Nastartujte léto <br/>s Daily Cash Hunt",
+    "prize": "€ 60 000",
+    "text": "Ninecasino vás s potěšením vítá jako účastníka síťového turnaje „Daily Cash Hunt“, který pořádá Booongo.<br/><br/>Turnajová série je unikátní herní promo akce, kterou pořádá Booongo. Je to kombinace pravidelných turnajů s různými podmínkami (jednotlivé turnaje ze série mohou mít odlišnou délku); bodování turnaje (vítězný mechanik) a také 2. (EXTRA) výsledková tabulka pro celkové postavení hráče v turnaji.",
+    "textMobile": "Ninecasino vás s potěšením vítá jako účastníka síťového turnaje „Daily Cash Hunt“, který pořádá Booongo.",
+    "terms": [
+      {
+        "title": "Turnaj se uskuteční od 10. června 2021 0:00 UTC do 22. června 2021 23:00 UTC: <br/><br/>",
+        "text": "● 10. 6. 2021 0:00 UTC až 15. 6. 2021 23:00 UTC (1. týden) <br/>● 17. 6. 2021 0:00 UTC až 22. 6. 2021 23:00 UTC (2. týden)"
+      },
+      {
+        "title": "Zapojené hry:<br/><br/>",
+        "text": "Hit The Gold, Aztec Pyramid, Magic Ball, Magic Apple, Aztec Sun, Sun Of Egypt 2, Sun Of Egypt, 15 Dragon Pearls, Dragon Pearls, Wolf Saga, 3 Coins, Scarab Temple, Tiger Stone, Super Rich God, Book Of Sun Choice."
+      },
+      {
+        "title": "",
+        "text": "Úžasný celkový prize pool pro tuto kampaň činí 60 000 eur a tvoří jej několik dílčích prize poolů s níže uvedenými parametry:<br/><br/>● 30 000 eur pro 1. týden – 4 000 eur pro každý regulérní turnaj, což činí celkem 24 000 eur pro 6 turnajů. A 6 000 eur pro výsledkovou tabulku série;<br/>● 30 000 eur pro 2. týden – 4 000 eur pro každý regulérní turnaj, což činí celkem 24 000 eur pro 6 turnajů. A 6 000 eur pro výsledkovou tabulku série."
+      },
+      {
+        "title": "",
+        "text": "Minimální sázka požadovaná pro účast je 0,5 eura nebo ekvivalent v jiné měně, minimální počet spinů je 100."
+      },
+      {
+        "title": "",
+        "text": "Daily Cash Hunt bude mít dvě výsledkové tabulky. Výsledková tabulka série (Extra) je vedena souběžně s průběžnou výsledkovou tabulkou regulérního turnaje. Více informací naleznete na webových stránkách.<br/>HSRM (největší násobek v jednom kole) je největší násobek mezi sázkou a výhrou a HSRP (největší výplata v jednom kole) je největší peněžitá výplata odpovídající počtu dosažených bodů.<br/> Nenechte si ujít příležitost získat podíl na obrovském prize poolu od Booongo! Hrajte, bavte se a vyhrávejte!"
+      },
+      {
+        "title": "Don’t miss out on sharing the huge prize pool from Booongo! Play, enjoy, and win!",
+        "text": ""
       }
     ]
   },
@@ -973,7 +1010,7 @@
         },
         "offer3" : {
           "title" : "Make a deposit and enjoy the games",
-          "text" : "When you buy Bitcoins, you can deposit them in your GetSlots account and start to play           games.<br />           Or you can use Bitcoin as an investment tool. It is a well-known and fast-growing           investment option.           <br /><br />           We also accept other cryptocurrencies in our casino. You can also make a deposit with           Ethereum, Litecoin and Bitcoin Cash."
+          "text" : "When you buy Bitcoins, you can deposit them in your Ninecasino account and start to play           games.<br />           Or you can use Bitcoin as an investment tool. It is a well-known and fast-growing           investment option.           <br /><br />           We also accept other cryptocurrencies in our casino. You can also make a deposit with           Ethereum, Litecoin and Bitcoin Cash."
         }
       }
     },
