--- a/locales/de.json
+++ b/locales/de.json
@@ -440,6 +440,11 @@
       "title": "Drops<span class=\"Colored\"> & </span>Wins<br/> Live",
       "name": "Drops & Wins Live",
       "text": "Pragmatic Play bietet mehr und mehr Unterhaltung der nächsten Stufe mit seinem neuen Drops and Wins for Live Casino. Ergreife die Chance, einen Anteil am unglaublichen 3.000.000 € Preisgeld zu gewinnen!<br/><br/>Magst du Live-Spiele? Diese Live-Ausgabe wird dir gefallen. Mach mit bei wöchentlichen Turnieren – Roulette, Blackjack, Mega Wheel, Baccarat!"
+    },
+    "dailyCashHunt": {
+      "title": "Daily <br/> Cash Hunt",
+      "name": "JAGEN SIE IN DIESEM SOMMER BEI DAILY CASH 60.000 EURO IN BAR!",
+      "text": "Ninecasino-Casino freut sich, Sie als Teilnehmer an der Daily Cash Hunt-Netz-Turnierserie von Booongo begrüßen zu dürfen.<br/>Die Turnierserie ist eine einmalige Aktion von Booongo. Es handelt sich um eine Kombination aus regelmäßigen Turnieren mit unterschiedlichen Laufzeiten (die Dauer der einzelnen Turnier einer Reihe kann variieren), dem jeweiligen Wertungsturnier (Gewinnmechanismus) sowie einer zweiten (SONDER-) Rangliste, die den Gesamtstand der Spielerin/des Spielers wiedergibt.<br/><br/>Verpassen Sie nicht Ihren Teil am riesigen Preisgeld von Booongo! Spielen, Spaß haben und gewinnen!"
     }
   },
   "tournaments": {
@@ -571,6 +576,38 @@
       {
         "title": "Zusätzlich:",
         "text": "<strong>How to win:<br/><br/>Wöchentliches Roulette-Turnier<br/>Gewinne:</strong> Insgesamt 50.000 € verteilt auf 1.000 Preise:<br/>Spieler müssen im Angebotszeitraum mit Echtgeld eines der teilnehmenden Spiele mit einem Mindesteinsatz von 0,50 € spielen. Die Teilnahme hat keine weiteren Kosten.<br/><br/>Ein Spieler muss mindestens 2 Aufeinanderfolgende Qualifizierende Siege erzielen, wobei jeder Aufeinanderfolgende Qualifizierende Sieg höher als 2x der gesamte Qualifizierende Wetteinsatz ist, um sich für das Wöchentliche Roulette-Turnier zu qualifizieren.<br/><br/>Ein Spieler kann seine Punktzahl im Wöchentlichen Roulette-Turnier mit jedem weiteren Aufeinanderfolgenden Qualifizierenden Sieg erhöhen.<br/><br/>Wetteinsätze, die auf Wetten mit Chance 1:1 getätigt werden (Rot/Schwarz, Gerade/Ungerade, 1:18/19:36) werden nicht auf die Punktzahl des Wöchentlichen Roulette-Turniers angerechnet.<br/><br/><strong>Wöchentliches Blackjack-Turnier:<br/>Gewinne:</strong> Insgesamt 25.000 € verteilt auf 300 Preise:<br/>Spieler müssen im Angebotszeitraum mit Echtgeld eines der teilnehmenden Spiele mit einem Mindesteinsatz von 10 € spielen. Die Teilnahme hat keine weiteren Kosten.<br/><br/>Ein Spieler muss mindestens 2 Aufeinanderfolgende Qualifizierende Siege erzielen, wobei jeder Aufeinanderfolgende Qualifizierende Sieg höher als 1x der gesamte Qualifizierende Wetteinsatz ist, um sich für das Wöchentliches Blackjack-Turnier zu qualifizieren.<br/><br/>Ein Spieler kann seine Punktzahl im Wöchentlichen Blackjack-Turnier mit jedem weiteren Aufeinanderfolgenden Qualifizierenden Sieg erhöhen.<br/><br/>Nur Main Bets und/oder Bets Behind werden für das Wöchentliche Blackjack-Turnier berücksichtigt.<br/><br/><strong>Wöchentliches Mega Wheel-Turnier:<br/>Gewinne:</strong> Insgesamt 25.000 € verteilt auf 600 Preise:<br/>Spieler müssen im Angebotszeitraum mit Echtgeld eines der teilnehmenden Spiele mit einem Mindesteinsatz von 0,50 € spielen. Die Teilnahme hat keine weiteren Kosten.<br/><br/>Ein Spieler muss mindestens 2 Aufeinanderfolgende Qualifizierende Siege erzielen, wobei jeder Aufeinanderfolgende Qualifizierende Sieg höher als 1x der gesamte Qualifizierende Wetteinsatz ist, um sich für das Wöchentliche Mega Wheel-Turnier zu qualifizieren.<br/><br/>Ein Spieler kann seine Punktzahl im Wöchentlichen Mega Wheel-Turnier mit jedem weiteren Aufeinanderfolgenden Qualifizierenden Sieg erhöhen.<br/><br/>Alle Qualifizierenden Wetten werden für das Wöchentliche Mega Wheel-Turnier berücksichtigt.<br/><br/><strong>Wöchentliche Baccarat-Turniere<br/>Gewinne:</strong> Insgesamt 25.000 € verteilt auf 600 Preise:<br/>Spieler müssen im Angebotszeitraum mit Echtgeld eines der teilnehmenden Spiele mit einem Mindesteinsatz von 0,50 € spielen. Die Teilnahme hat keine weiteren Kosten.<br/><br/>Ein Spieler muss mindestens 2 Aufeinanderfolgende Qualifizierende Siege erzielen, wobei jeder Aufeinanderfolgende Qualifizierende Sieg höher als 1x der gesamte Qualifizierende Wetteinsatz ist, um sich für das Wöchentliche Baccarat-Turnier zu qualifizieren.<br/><br/>Ein Spieler kann seine Punktzahl im Wöchentlichen Baccarat-Turnier mit jedem weiteren Aufeinanderfolgenden Qualifizierenden Sieg erhöhen.<br/><br/>Nur Main Bets (Player, Banker und Tie) werden für das Wöchentliche Baccarat-Turnier berücksichtigt."
+      }
+    ]
+  },
+  "dailyCashHunt": {
+    "title": "Eröffnen Sie Ihren <br/>Sommer mit der <br/>Daily Cash Hunt",
+    "prize": "€ 60 000",
+    "text": "Ninecasino freut sich, Sie als Teilnehmer an der Daily Cash Hunt-Netz-Turnierserie von Booongo begrüßen zu dürfen.<br/><br/>Die Turnierserie ist eine einmalige Aktion von Booongo. Es handelt sich um eine Kombination aus regelmäßigen Turnieren mit unterschiedlichen Laufzeiten (die Dauer der einzelnen Turnier einer Reihe kann variieren), dem jeweiligen Wertungsturnier (Gewinnmechanismus) sowie einer zweiten (SONDER-) Rangliste, die den Gesamtstand der Spielerin/des Spielers wiedergibt.",
+    "textMobile": "Ninecasino freut sich, Sie als Teilnehmer an der Daily Cash Hunt-Netz-Turnierserie von Booongo begrüßen zu dürfen.",
+    "terms": [
+      {
+        "title": "Die Turnierserie läuft vom 10.06.2021 00:01 UTC bis zum 22.06.2021 23:00 UTC in folgenden Etappen:<br/><br/>",
+        "text": "● 10.06.2021 um 0:00 Uhr UTC bis 15.06.2021 um 23:00 Uhr UTC (Woche 1) <br/>● 17.06.2021 um 0:00 Uhr UTC bis 22.06.2021 um 23:00 Uhr UTC (Woche 2)"
+      },
+      {
+        "title": "Beteiligte Spiele: <br/><br/>",
+        "text": "Hit The Gold, Aztec Pyramid, Magic Ball, Magic Apple, Aztec Sun, Sun Of Egypt 2, Sun Of Egypt, 15 Dragon Pearls, Dragon Pearls, Wolf Saga, 3 Coins, Scarab Temple, Tiger Stone, Super Rich God, Book Of Sun Choice."
+      },
+      {
+        "title": "",
+        "text": "Des grandiose Gesamtpreisgeld für diese Aktion beläuft sich auf 60.000 Euro, die sich nach folgendem Modell aus mehreren Töpfen zusammensetzen: <br/><br/>● 30.000 Euro in Woche 1 – 4.000 Euro in jedem regelmäßig ausgespielten Turnier, das entspricht einem Gesamtbetrag von 24.000 Euro in 6 Turnieren sowie 6.000 Euro für die Bestplatzierten in der Rangliste der Serie;<br/>● 30.000 Euro in Woche 2 – 4.000 Euro in jedem regelmäßig ausgespielten Turnier, das entspricht einem Gesamtbetrag von 24.000 Euro in 6 Turnieren sowie 6.000 Euro für die Bestplatzierten in der Rangliste der Serie;"
+      },
+      {
+        "title": "",
+        "text": "Der Mindesteinsatz für die Teilnahme beträgt umgerechnet 0,5 Euro in mindestens 100 Ausspielungen."
+      },
+      {
+        "title": "",
+        "text": "Dazu gibt es bei der Daily Cash Hunt zwei Ranglisten. Die (Sonder-) Rangliste der jeweiligen Serie wird parallel zu der spielinternen Rangliste der regelmäßig ausgespielten Einzelturniere geführt. Weitere Angaben bietet die Webseite.<br/>HSRM (Bestes Gewinn-Einsatz-Verhältnis) steht für das höchste Vielfache eines Einzelgewinns gemessen am jeweiligen Einsatz und HSRP (Höchster Gewinn in Punkten) für den höchsten Geldgewinn entsprechend der Anzahl der zugewiesenen Punkte. <br/>Die von den Mitspielenden erworbenen Punkte für die Sonderrangliste der jeweiligen Serie werden bei allen Turnieren erfasst. "
+      },
+      {
+        "title": "Verpassen Sie nicht Ihren Teil am riesigen Preisgeld von Booongo! Spielen, Spaß haben und gewinnen!",
+        "text": ""
       }
     ]
   },
@@ -979,7 +1016,7 @@
         },
         "offer3": {
           "title": "MACH EINE EINZAHLUNG UND GENIESSE DIE SPIELE",
-          "text": "Wenn du Bitcoins kaufst, kannst du sie in dein GetSlots-Konto einzahlen und anfangen zu spielen. Oder du kannst Bitcoin als Investitionsmöglichkeit nutzen. Es ist eine wohlbekannte und schnell wachsende Investitionsmöglichkeit. Wir akzeptieren auch andere Kryptowährungen in unserem Casino. Du kannst Einzahlungen auch mit Ethereum, Litecoin und Bitcoin Cash machen."
+          "text": "Wenn du Bitcoins kaufst, kannst du sie in dein Ninecasino-Konto einzahlen und anfangen zu spielen. Oder du kannst Bitcoin als Investitionsmöglichkeit nutzen. Es ist eine wohlbekannte und schnell wachsende Investitionsmöglichkeit. Wir akzeptieren auch andere Kryptowährungen in unserem Casino. Du kannst Einzahlungen auch mit Ethereum, Litecoin und Bitcoin Cash machen."
         }
       }
     },
