NINE-514 replaced link

--- a/locales/de.json
+++ b/locales/de.json
@@ -917,7 +917,7 @@
             },
             {
               "title": "WELCHE SPIELE KANN ICH MIT MEINEM BONUS SPIELEN?",
-              "answer": "Unless otherwise stated, all bonuses have 'Standard Wagering' terms, meaning that you can place bets on Slots and Scratch games. It’s important to note, however, that eligible games may differ from one offer to another, so we recommend you review our Bonus Policy by Sofern nichts anderes angegeben ist, unterliegen alle Boni den „Standard-Wettbedingungen“, was bedeutet, dass du auf Automatenspiele und Rubbellose Wetten abschließen kannst. Es ist allerdings wichtig, darauf hinzuweisen, dass die verfügbaren Spiele sich voneinander unterscheiden können, wir empfehlen dir daher, hier zu <a href='/bonus-policy' class='TextLink'>klicken</a> und unsere Bonusrichtlinien zu lesen, um jegliche Verwirrung zu vermeiden."
+              "answer": "Unless otherwise stated, all bonuses have 'Standard Wagering' terms, meaning that you can place bets on Slots and Scratch games. It’s important to note, however, that eligible games may differ from one offer to another, so we recommend you review our Bonus Policy by Sofern nichts anderes angegeben ist, unterliegen alle Boni den „Standard-Wettbedingungen“, was bedeutet, dass du auf Automatenspiele und Rubbellose Wetten abschließen kannst. Es ist allerdings wichtig, darauf hinzuweisen, dass die verfügbaren Spiele sich voneinander unterscheiden können, wir empfehlen dir daher, hier zu <a href='/bonus-terms' class='TextLink'>klicken</a> und unsere Bonusrichtlinien zu lesen, um jegliche Verwirrung zu vermeiden."
             },
             {
               "title": "WO KANN ICH MEINE BONUS-WETTBEDINGUNGEN EINSEHEN?",
