--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -916,7 +916,7 @@
             },
             {
               "title": "On which games can I play with my bonus?",
-              "answer": "Unless otherwise stated, all bonuses have 'Standard Wagering' terms, meaning that you can place bets on Slots and Scratch games. It’s important to note, however, that eligible games may differ from one offer to another, so we recommend you review our Bonus Policy by <a href='/bonus-policy' class='TextLink'>clicking here</a> to avoid any confusion."
+              "answer": "Unless otherwise stated, all bonuses have 'Standard Wagering' terms, meaning that you can place bets on Slots and Scratch games. It’s important to note, however, that eligible games may differ from one offer to another, so we recommend you review our Bonus Policy by <a href='/bonus-terms' class='TextLink'>clicking here</a> to avoid any confusion."
             },
             {
               "title": "Where can I check my bonus wagering requirements?",
