--- a/locales/de.json
+++ b/locales/de.json
@@ -442,7 +442,7 @@
       "text": "Pragmatic Play bietet mehr und mehr Unterhaltung der nächsten Stufe mit seinem neuen Drops and Wins for Live Casino. Ergreife die Chance, einen Anteil am unglaublichen 3.000.000 € Preisgeld zu gewinnen!<br/><br/>Magst du Live-Spiele? Diese Live-Ausgabe wird dir gefallen. Mach mit bei wöchentlichen Turnieren – Roulette, Blackjack, Mega Wheel, Baccarat!"
     },
     "dailyCashHunt": {
-      "title": "Daily <br/> Cash Hunt",
+      "title": "Feiern Sie<br/> Daily Cash Hunt<br/> Woche 2",
       "name": "JAGEN SIE IN DIESEM SOMMER BEI DAILY CASH 60.000 EURO IN BAR!",
       "text": "Ninecasino-Casino freut sich, Sie als Teilnehmer an der Daily Cash Hunt-Netz-Turnierserie von Booongo begrüßen zu dürfen.<br/>Die Turnierserie ist eine einmalige Aktion von Booongo. Es handelt sich um eine Kombination aus regelmäßigen Turnieren mit unterschiedlichen Laufzeiten (die Dauer der einzelnen Turnier einer Reihe kann variieren), dem jeweiligen Wertungsturnier (Gewinnmechanismus) sowie einer zweiten (SONDER-) Rangliste, die den Gesamtstand der Spielerin/des Spielers wiedergibt.<br/><br/>Verpassen Sie nicht Ihren Teil am riesigen Preisgeld von Booongo! Spielen, Spaß haben und gewinnen!"
     }
@@ -580,34 +580,26 @@
     ]
   },
   "dailyCashHunt": {
-    "title": "Eröffnen Sie Ihren <br/>Sommer mit der <br/>Daily Cash Hunt",
+    "title": "Feiern Sie<br/> Daily Cash Hunt<br/> Woche 2",
     "prize": "€ 60 000",
-    "text": "Ninecasino freut sich, Sie als Teilnehmer an der Daily Cash Hunt-Netz-Turnierserie von Booongo begrüßen zu dürfen.<br/><br/>Die Turnierserie ist eine einmalige Aktion von Booongo. Es handelt sich um eine Kombination aus regelmäßigen Turnieren mit unterschiedlichen Laufzeiten (die Dauer der einzelnen Turnier einer Reihe kann variieren), dem jeweiligen Wertungsturnier (Gewinnmechanismus) sowie einer zweiten (SONDER-) Rangliste, die den Gesamtstand der Spielerin/des Spielers wiedergibt.",
-    "textMobile": "Ninecasino freut sich, Sie als Teilnehmer an der Daily Cash Hunt-Netz-Turnierserie von Booongo begrüßen zu dürfen.",
+    "text": "Ninecasino freut sich, Sie als Teilnehmer an der \"Daily Cash Hunt\" Netzwerk-Turnierserie von Booongo begrüßen zu dürfen.",
+    "textMobile": "Ninecasino freut sich, Sie als Teilnehmer an der \"Daily Cash Hunt\" Netzwerk-Turnierserie von Booongo begrüßen zu dürfen.",
     "terms": [
       {
-        "title": "Die Turnierserie läuft vom 10.06.2021 00:01 UTC bis zum 22.06.2021 23:00 UTC in folgenden Etappen:<br/><br/>",
-        "text": "● 10.06.2021 um 0:00 Uhr UTC bis 15.06.2021 um 23:00 Uhr UTC (Woche 1) <br/>● 17.06.2021 um 0:00 Uhr UTC bis 22.06.2021 um 23:00 Uhr UTC (Woche 2)"
-      },
-      {
-        "title": "Beteiligte Spiele: <br/><br/>",
-        "text": "Hit The Gold, Aztec Pyramid, Magic Ball, Magic Apple, Aztec Sun, Sun Of Egypt 2, Sun Of Egypt, 15 Dragon Pearls, Dragon Pearls, Wolf Saga, 3 Coins, Scarab Temple, Tiger Stone, Super Rich God, Book Of Sun Choice."
+        "title": "",
+        "text": "Wir betreten Woche 2 des Turniers - 17.06.2021 0:00 UTC bis 22.06.2021 23:00 UTC"
       },
       {
         "title": "",
-        "text": "Des grandiose Gesamtpreisgeld für diese Aktion beläuft sich auf 60.000 Euro, die sich nach folgendem Modell aus mehreren Töpfen zusammensetzen: <br/><br/>● 30.000 Euro in Woche 1 – 4.000 Euro in jedem regelmäßig ausgespielten Turnier, das entspricht einem Gesamtbetrag von 24.000 Euro in 6 Turnieren sowie 6.000 Euro für die Bestplatzierten in der Rangliste der Serie;<br/>● 30.000 Euro in Woche 2 – 4.000 Euro in jedem regelmäßig ausgespielten Turnier, das entspricht einem Gesamtbetrag von 24.000 Euro in 6 Turnieren sowie 6.000 Euro für die Bestplatzierten in der Rangliste der Serie;"
+        "text": "Die Tournament Series ist eine einzigartige Spiel-Promotion, die von Booongo eingeführt wurde. Es handelt sich um eine Kombination aus regulären Turnieren mit gemischten Laufzeiten (die Dauer jedes Turniers in der Serie kann variieren); dem Wertungsturnier (Gewinnmechanik) und auch einem 2. (EXTRA) Leaderboard, das den Gesamtfortschritt des Spielers widerspiegelt."
       },
       {
         "title": "",
-        "text": "Der Mindesteinsatz für die Teilnahme beträgt umgerechnet 0,5 Euro in mindestens 100 Ausspielungen."
+        "text": "Erhalten Sie die Chance, einen Preispool von 30.000 EUR für Woche 2 zu teilen - 4.000 EUR für jedes reguläre Turnier, also insgesamt 24.000 EUR für 6 Turniere. Und 6.000 EUR für das Series Leaderboard."
       },
       {
         "title": "",
-        "text": "Dazu gibt es bei der Daily Cash Hunt zwei Ranglisten. Die (Sonder-) Rangliste der jeweiligen Serie wird parallel zu der spielinternen Rangliste der regelmäßig ausgespielten Einzelturniere geführt. Weitere Angaben bietet die Webseite.<br/>HSRM (Bestes Gewinn-Einsatz-Verhältnis) steht für das höchste Vielfache eines Einzelgewinns gemessen am jeweiligen Einsatz und HSRP (Höchster Gewinn in Punkten) für den höchsten Geldgewinn entsprechend der Anzahl der zugewiesenen Punkte. <br/>Die von den Mitspielenden erworbenen Punkte für die Sonderrangliste der jeweiligen Serie werden bei allen Turnieren erfasst. "
-      },
-      {
-        "title": "Verpassen Sie nicht Ihren Teil am riesigen Preisgeld von Booongo! Spielen, Spaß haben und gewinnen!",
-        "text": ""
+        "text": "Der Mindesteinsatz, um sich zu qualifizieren, beträgt 0,5 EUR oder den entsprechenden Währungsbetrag und die Mindestanzahl an Freispielen beträgt 100."
       }
     ]
   },
