--- a/locales/en.json
+++ b/locales/en.json
@@ -443,7 +443,7 @@
       "text": "Pragmatic Play gives you more and more opportunities to entertain yourself with the next level with its new Drops and Wins for Live Casino. Grab the chance to win a share of the impressive €3,000,000 in cash prizes!<br/><br/>Do you like Live games? This Live edition suits you for sure. Take part in the Weekly Tournaments - Roulette, Blackjack, Mega Wheel, Baccarat!"
     },
     "dailyCashHunt": {
-      "title": "Daily <br/> Cash Hunt",
+      "title": "Celebrate<br/> Daily Cash Hunt<br/> Week 2",
       "name": "HUNT DOWN 60K IN DAILY CASH THIS SUMMER!",
       "text": "Ninecasino is pleased to welcome you as a participant in the ”Daily Cash Hunt” Network Tournament Series from Booongo.<br/>The Tournament Series is a unique game promotion introduced by Booongo. It’s a combo of regular tournaments with mixed terms (the duration of each tournament in the series can vary); the Scoring tournament (Winning Mechanic) and also a 2nd (EXTRA) Leaderboard reflecting the player’s overall progress.<br/><br/>Don’t miss out on sharing the huge prize pool from Booongo! Play, enjoy, and win!"
     }
@@ -584,34 +584,26 @@
     ]
   },
   "dailyCashHunt": {
-    "title": "Kick start <br/>your summer with <br/>the Daily Cash Hunt",
+    "title": "Celebrate<br/> Daily Cash Hunt<br/> Week 2",
     "prize": "€ 60 000",
-    "text": "Ninecasino is pleased to welcome you as a participant in the ”Daily Cash Hunt” Network Tournament Series from Booongo.<br/><br/>The Tournament Series is a unique game promotion introduced by Booongo. It’s a combo of regular tournaments with mixed terms (the duration of each tournament in the series can vary); the Scoring tournament (Winning Mechanic) and also a 2nd (EXTRA) Leaderboard reflecting the player’s overall progress.",
-    "textMobile": "Ninecasino is pleased to welcome you as a participant in the ”Daily Cash Hunt” Network Tournament Series from Booongo.",
+    "text": "Ninecasino is pleased to welcome you as a participant in the ”Daily Cash Hunt” Network Tournament Series from Booongo.",
+    "textMobile": " is pleased to welcome you as a participant in the ”Daily Cash Hunt” Network Tournament Series from Booongo.",
     "terms": [
       {
-        "title": "It runs between 10.06.2021 0:00 UTC and 22.06.2021 23:00 UTC, and is split as: <br/><br/>",
-        "text": "● 10.06.2021 0:00 UTC to 15.06.2021 23:00 UTC (week 1) <br/>● 17.06.2021 0:00 UTCto 22.06.2021 23:00 UTC (week 2)"
+        "title": "",
+        "text": "We are entering Week 2 of the Tournament - 17.06.2021 0:00 UTCto 22.06.2021 23:00 UTC"
       },
       {
-        "title": "Games to play: <br/><br/>",
-        "text": "Hit The Gold, Aztec Pyramid, Magic Ball, Magic Apple, Aztec Sun, Sun Of Egypt 2, Sun Of Egypt, 15 Dragon Pearls, Dragon Pearls, Wolf Saga, 3 Coins, Scarab Temple, Tiger Stone, Super Rich God, Book Of Sun Choice."
+        "title": "",
+        "text": "The Tournament Series is a unique game promotion introduced by Booongo. It’s a combo of regular tournaments with mixed terms (the duration of each tournament in the series can vary); the Scoring tournament (Winning Mechanic) and also a 2nd (EXTRA) Leaderboard reflecting the player’s overall progress."
       },
       {
         "title": "Prize pool information: <br/><br/>",
-        "text": "The Grand Total Prize Pool is \u200B60,000 EUR \u200Bfor this Campaign combined from several pools by the following structure:<br/><br/>● 30,000 EUR \u200Bfor \u200BWeek 1 \u200B-  4,000 EUR \u200Bfor each Regular Tournament, which is \u200B24,000 EUR in total for \u200B6 tournaments. And 6,000 EUR\u200B for the Series Leaderboard;<br/>● 30,000 EUR \u200Bfor \u200BWeek 2 -  4,000 EUR \u200Bfor each Regular Tournament, which is \u200B24,000 EUR in total for \u200B6 tournaments. And 6,000 EUR\u200B for the Series Leaderboard."
+        "text": "Get a chance to share a prize pool of 30,000 EUR \u200Bfor \u200BWeek 2 -  4,000 EUR \u200Bfor each Regular Tournament, which is \u200B24,000 EUR in total for \u200B6 tournaments. And 6,000 EUR\u200B for the Series Leaderboard."
       },
       {
         "title": "Minimum bet requirements: <br/><br/>",
         "text": "The minimum bet required to qualify is \u200B0.5 EUR\u200B or currency equivalent and the minimum \u200Bnumber of spins\u200B is \u200B100."
-      },
-      {
-        "title": "Additional terms and conditions: <br/><br/>",
-        "text": "The Daily Cash Hunt will have two Leaderboards. The \u200BSeries (Extra) Leaderboard runs in parallel \u200Bwith the In-Game Regular Tournament Leaderboard. Check the website for more information.<br/>HSRM is the highest win-to-bet multiplier and HSRP is the biggest payout equal to the number of assigned points.<br/>The Points to Series Extra Leaderboard \u200Breceived by players are accumulated during all tournaments."
-      },
-      {
-        "title": "Don’t miss out on sharing the huge prize pool from Booongo! Play, enjoy, and win!",
-        "text": ""
       }
     ]
   },
