NINE-517 corrected texts in banners

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -180,7 +180,7 @@
     "heroBanner" : {
       "deposit1" : {
         "title" : "Programu <br/> Cashback <span class = \"Colored\">až 20% </span>",
-        "text" : "Proveďte první vklad <br/> a získejte <span class = \"Colored\"> 100% </span><br/> až <span class = \"Colored\"> Kč 3330 </span> + <span class=\"Colored\">150 spinů zdarma</span>"
+        "text" : "NA VÁŠ PRVNÍ VKLAD <br/> a získejte <span class = \"Colored\"> 100% </span><br/> až <span class = \"Colored\"> Kč 3330 </span> + <span class=\"Colored\">150 spinů zdarma</span>"
       },
       "deposit2" : {
         "title" : "Bonus <br/> za druhý vklad",
