--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -183,7 +183,7 @@
     "heroBanner": {
       "deposit1": {
         "title": "Remise quotidienne <br> en espèces jusqu'à  <span class=\"Colored\">20%</span>",
-        "text": "Effectuez un premier dépôt <br/> et obtenez <span class = \"Colored\"> 100% </span><br/> jusqu'à <span class = \"Colored\">$225</span> + <span class=\"Colored\">150 tours gratuit</span>"
+        "text": "BONUS DE PREMIER<br/> DÉPÔT <span class = \"Colored\"> 100% </span> jusqu’à <br/><span class = \"Colored\">$225</span> + <span class=\"Colored\">150 tours gratuites</span>"
       },
       "deposit2": {
         "title": "Bonus de deuxième<br/> dépôt",
