--- a/locales/de.json
+++ b/locales/de.json
@@ -184,8 +184,8 @@
   "homepage": {
     "heroBanner": {
       "deposit1": {
-        "title": "Tägliche rückzahlung bis zu <span class=\"Colored\"> 20%</span>",
-        "text": "Machen Sie die erste Einzahlung <br/> und erhalten Sie <span class=\"Colored\"> 100% </span><br/> bis zu <span class=\"Colored\"> € 150 + <span class=\"Colored\">150 freispiele</span>"
+        "title": "Tägliche rückzahlung<br/> bis zu <span class=\"Colored\"> 20%</span>",
+        "text": "BONUS AUF DIE ERSTE<br/> EINZAHLUNG <span class=\"Colored\"> 100% </span> <br/>bis zu <span class=\"Colored\"> € 150 + <span class=\"Colored\">150 freispiele</span>"
       },
       "deposit2": {
         "title": "Bonus für zweite<br/>  Einzahlung",
@@ -200,7 +200,7 @@
         "text": "<span class=\"Colored\">40% BIS ZU €150</span>"
       },
       "highroller": {
-        "title": "HIGHROLLER-BONUS<br/> FÜR BESONDERE<br/> EINSATZFREUDE",
+        "title": "HIGH ROLLER-BONUS<br/> FÜR BESONDERE<br/> EINSATZFREUDE",
         "text": "<span class=\"Colored\">bis zu €500</span>"
       }
     },
@@ -423,7 +423,7 @@
     },
     "highroller": {
       "upTo": "up to €500",
-      "name": "Highroller-bonus für besondere einsatzfreude",
+      "name": "High roller-bonus für besondere einsatzfreude",
       "text": "Sie stehen auf hohe Einsätze? Dann haben wir das Richtige für Sie. Erhalten Sie einmal im Monat einen Highroller-Bonus für besondere Einsatzfreude von 30% bis zu einem Höchstbetrag von €500 auf eine Einzahlung ab mindestens €300."
     },
     "knockoutFootball": {
